--- a/src/assets/stylesheets/application.scss
+++ b/src/assets/stylesheets/application.scss
@@ -15,10 +15,45 @@ body {
 
 .wrapper {
   min-height: 100vh;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
+  display: flex;
+  //padding-bottom: 2em;
+  height: 100%;
+  flex-direction: column;
 }
 
-main {
-  padding: 2em 0;
+.column {
+  height: 100%;
+  display: flex;
 }
+
+.header{
+  display: flex;
+  flex-shrink: 0;
+  flex-direction: row;
+}
+
+.header-left{
+  flex-grow: 2;
+}
+
+.header-right{
+  flex-grow: 20;
+}
+
+.main-screen {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: row;
+}
+
+.section-left{
+  flex-grow: 1;
+  max-width: 300px;
+}
+
+.main {
+  flex-grow: 3;
+}
+
+
+
