--- a/src/assets/stylesheets/application.scss
+++ b/src/assets/stylesheets/application.scss
@@ -26,17 +26,17 @@ body {
   display: flex;
 }
 
-.header{
+.header {
   display: flex;
   flex-shrink: 0;
   flex-direction: row;
 }
 
-.header-left{
+.header-left {
   flex-grow: 2;
 }
 
-.header-right{
+.header-right {
   flex-grow: 20;
 }
 
@@ -44,16 +44,27 @@ body {
   flex-grow: 1;
   display: flex;
   flex-direction: row;
+  @media (min-width: 1281px) {
+    flex-direction: row;
+  }
+
+  @media (min-width: 320px) and (max-width: 480px) {
+    flex-direction: column-reverse;
+  }
 }
 
-.section-left{
+.section-left {
   flex-grow: 1;
   max-width: 300px;
+
+  @media (min-width: 320px) and (max-width: 480px) {
+    max-width: 100%;
+  }
 }
 
 .main {
   flex-grow: 3;
+  @media (min-width: 320px) and (max-width: 480px) {
+    height: 60vh;
+  }
 }
-
-
-
