--- a/src/assets/stylesheets/components/_map.scss
+++ b/src/assets/stylesheets/components/_map.scss
@@ -45,7 +45,7 @@
   border-radius: 100%;
   box-shadow: 0 2px 5px rgba(black, 0.9);
 
-  &:hover {
+  &:hover, &:active, &:focus {
     .icon-marker-tooltip {
       display: block;
     }
