--- a/src/assets/stylesheets/application.scss
+++ b/src/assets/stylesheets/application.scss
@@ -48,22 +48,41 @@ body {
   }
 
   @media (min-width: 320px) and (max-width: 480px) {
-    flex-direction: column-reverse;
+    flex-flow: row wrap;
+    width: 100%;
   }
 }
 
-.section-left {
+.section {
   flex-grow: 1;
   max-width: 300px;
 
+  &.section-left {
+    order: -1;
+  }
   @media (min-width: 320px) and (max-width: 480px) {
     max-width: 100%;
+
+    &.section-left {
+     max-width: 50%;
+    }
+
+    &.section-right {
+      max-width: 50%;
+    }
   }
 }
-
 .main {
   flex-grow: 3;
   @media (min-width: 320px) and (max-width: 480px) {
+    width: 100%;
     height: 60vh;
+    order: -1;
+  }
+}
+
+h3{
+  @media (min-width: 320px) and (max-width: 480px) {
+    font-size: 14px;
   }
 }
