--- a/src/assets/stylesheets/components/_section.scss
+++ b/src/assets/stylesheets/components/_section.scss
@@ -46,7 +46,7 @@ section {
 
     .countries-item {
       list-style-type: none;
-      padding: 0 2.5em 10px 2.5em;
+      padding: 0 1.5em 0.5em 1.5em;
       border-bottom: 1px solid #bfbdbd;
       text-align: start;
       display: flex;
